[FIX] website_sale: align sidebar dropzone
In commit[1] dropzones were introduced in the sidebar to be able to drop
inner snippet inside. However due to the `<p>`'s margin it misalign the
sidebar content from the /shop page title.

This commit adds a css rule to:
- Remove the p's margin when no snippet are yet dropped inside
(p:only-child)
- Let the `<p>` margin exist if the dropzone is visible to avoid
dropzone overlapping eachother when editing)
- Add a top padding if a snippet exists inside to align the content of
the snippet to the title (p is not only-child)
- Add a pt-3 for not collapsable sidebar (fixes alignment for
non-collapsable sidebar + bonus fix a bug with the product attribute
border when categories are in the sidebar).

task-4979001

[1]: odoo/odoo@85254e3da69b78c586f8e21be80015426ddcaeed

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -578,6 +578,16 @@ $input-border-color: $gray-400;
             height: 32px;
             width: 32px;
         }
+
+        & #oe_structure_website_sale_sidebar_top {
+            &:where(:not(:has(div.oe_dropzone))) .s_text_block p:only-child {
+                margin-bottom: 0;
+            }
+
+            &:where(:has(.s_text_block p:not(:only-child))) {
+                padding-top: map-get($spacers, 3);
+            }
+        }
     }
 }
 
